--- a/Exercicio 04 - Autenticar Login e senha bytebank/Exercicio 04 - Autenticar Login e senha bytebank.csproj
+++ b/Exercicio 04 - Autenticar Login e senha bytebank/Exercicio 04 - Autenticar Login e senha bytebank.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
+    <RootNamespace>Exercicio_04___Autenticar_Login_e_senha_bytebank</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
